# google-agent-test

./: .env  AGENTS.md  README.md  ex1.py  gemini.md  main.py  pyproject.toml
.qwen/: settings.json
agent_manager_docs/: README.md  __init__.py  adk_best_practices.md  adk_index_reference.md  agents_manager.md  api_reference.md  changelog.md  memory_module.md  refactoring_summary.md  streaming_improvements.md  ui_module.md  usage_examples.md  web_scraper_module.md
agents-adk/: ADK_Google_Best_Practices.md
agents-adk-docs/: ADK_Index_Quick_Reference.md
agents-adk-docs/adk-plugins/: README.md  requirements.txt
agents-adk-docs/adk-runtime/: 01_runtime_overview.md  02_runconfig.md  03_events_and_streaming.md
agents-adk-docs/adk-streaming/: streaming.md
agents-adk-docs/adk-tools-guide/: app.py  requirements.txt
agents-adk-docs/context/: context.md
agents-adk-docs/events/: events.md
agents-adk-docs/grounding/: grounding.md
agents-adk-docs/runners/: runners.md
agents-adk/adk-artifacts/: Artifacts_Developer_Guide.md  README.md
agents-adk/adk-bidi-streaming-/: README.md  requirements.txt
agents-adk/adk-plugins/: main.py
agents-adk/adk-runtime/: 04_sessions_and_state.md  README.md  SOURCES.md
agents-adk/adk-streaming/: README.md
agents-adk/adk-tools-guide/: README.md
agents-adk/agents/: agents.md
agents-adk/mcp/: .env.example  README.md
exmples/: example_1.py  example_2.py  example_3.py
modules/Agents/: env.py  team.py  (+1 more)
src/: README.md  advanced_example.py  example_usage.py  interactive_qa_agent.py  multi_user_example.py  streaming_example.py
(+72 files in other folders)
